# TicTacToe_CPP

./: .gitignore  CMakeLists.txt  README.md  TicTacToeConfig.h.in
game/: CMakeLists.txt  main.cpp  renderer.cpp  renderer.h
libtictactoe/: CMakeLists.txt  board.cpp  board.h  board_cell.cpp  board_cell.h  game_logic.cpp  game_logic.h
test/: CMakeLists.txt  board_test.cpp  logic_test.cpp  render_test.cpp
